# advent-of-code

./: pyproject.toml
solutions/2024/day_01/: README.md  solution.py
solutions/2024/day_02/: README.md  solution.py
solutions/2024/day_03/: README.md  solution.py
solutions/2024/day_04/: README.md  solution.py
solutions/2024/day_05/: README.md  solution.py
solutions/2024/day_06/: README.md  solution.py
solutions/2024/day_07/: README.md  solution.py
solutions/2024/day_08/: README.md  solution.py
solutions/2024/day_09/: README.md  solution.py
solutions/2024/day_10/: README.md  solution.py
solutions/2024/day_11/: README.md  solution.py
solutions/2024/day_12/: README.md  solution.py
solutions/2024/day_13/: README.md  solution.py
solutions/2024/day_14/: README.md  solution.py
solutions/2024/day_15/: README.md  solution.py
solutions/2024/day_16/: README.md  solution.py
solutions/2024/day_17/: README.md  solution.py
solutions/2024/day_18/: README.md  solution.py
solutions/2024/day_19/: README.md  solution.py
solutions/2024/day_20/: README.md  solution.py
solutions/2024/day_21/: README.md  solution.py
solutions/2024/day_22/: README.md  solution.py
solutions/2024/day_23/: README.md  solution.py
solutions/2024/day_24/: README.md  solution.py
solutions/2024/day_25/: README.md  solution.py
solutions/2025/day_01/: README.md  solution.py
solutions/2025/day_02/: README.md  solution.py
solutions/2025/day_03/: README.md  solution.py
solutions/2025/day_04/: README.md  solution.py
solutions/2025/day_05/: README.md  solution.py
solutions/2025/day_06/: README.md  solution.py
solutions/2025/day_07/: README.md  solution.py
solutions/2025/day_08/: README.md  solution.py
solutions/2025/day_09/: README.md  solution.py
solutions/utils/: grid.py  iterables.py  parsing.py
